--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.1.4",
     "react-file-reader": "^1.1.4",
-    "react-scripts": "3.0.0",
+    "react-scripts": "^3.3.1",
     "styled-components": "^4.2.0",
     "xml2js": "^0.4.8"
   },
